Add conversions/file endpoint
