# src/main/resources/swagger.yaml
@@ -554,6 +554,30 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  /conversions/file/{file_id}:
+    get:
+      summary: Retrieve the results of a file conversion
+      description: |
+        Retrieve a file that was generated by a converter.
+      produces:
+        - file
+      parameters:
+        - name: file_id
+          in: path
+          required: true
+          type: string
+      security:
+        - TokenHeader: []
+        - TokenQueryParam: []
+      tags:
+        - Conversions
+      responses:
+        '200':
+          description: File content
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
   /extractions/url:
     post:
       summary: Uploads a file for extraction using the file's URL
